@@ -1,4 +1,5 @@
 3.10
+ * Fix testLimitSSTables flake caused by concurrent flush (CASSANDRA-12820)
  * Fix TestHintedHandoff.hintedhandoff_decom_test (CASSANDRA-13058)
  * Fixed query monitoring for range queries (CASSANDRA-13050)
  * Remove outboundBindAny configuration property (CASSANDRA-12673)
